--- a/apps/website/src/routes/guide/introduction.mdx
+++ b/apps/website/src/routes/guide/introduction.mdx
@@ -56,7 +56,7 @@ function damage({ health }: With<Entity, "health">, amount: number) {
   health.current -= amount
 }
 
-function poison(entity: With<Entity, "poison">) {
+function poison(entity: Entity) {
   world.addComponent(entity, "poison", true)
 }
 
