--- a/apps/website/src/routes/manual/introduction.mdx
+++ b/apps/website/src/routes/manual/introduction.mdx
@@ -11,7 +11,13 @@ import { Counter } from "../../components/Counter"
 
 ## Testimonials
 
-> Tested @hmans' Miniplex library over the weekend and after having previously implemented an ECS for my wip browser game, I have to say **Miniplex feels like the "right" way to do ECS in #r3f**. - [Brian Breiholz](https://twitter.com/BrianBreiholz/status/1577182839509962752)
+From [Jonathan Verrecchia](https://twitter.com/verekia):
+
+> **Miniplex has been the backbone of my games for the past 6 months and it has been a delightful experience.** The TypeScript support and React integration are excellent, and the API is very clear and easy to use, even as a first ECS experience.
+
+From [Brian Breiholz](https://twitter.com/BrianBreiholz/status/1577182839509962752):
+
+> Tested @hmans' Miniplex library over the weekend and after having previously implemented an ECS for my wip browser game, I have to say **Miniplex feels like the "right" way to do ECS in #r3f**.
 
 ## Example
 
