--- a/apps/website/src/routes/introduction.mdx
+++ b/apps/website/src/routes/introduction.mdx
@@ -4,6 +4,10 @@ title: Introduction
 
 # Introduction
 
+![Tests](https://img.shields.io/github/workflow/status/hmans/miniplex/Tests?label=CI&style=for-the-badge)
+
+[Tests](https://img.shields.io/github/workflow/status/hmans/miniplex/Tests?label=CI&style=for-the-badge)
+
 ## Testimonials
 
 From [Jonathan Verrecchia](https://twitter.com/verekia):
