--- a/apps/website/src/routes/manual/installation.mdx
+++ b/apps/website/src/routes/manual/installation.mdx
@@ -13,3 +13,11 @@ npm add miniplex@next
 yarn add miniplex@next
 pnpm add miniplex@next
 ```
+
+You can now import the `World` class from this package and use it to create a Miniplex ECS world:
+
+```js
+import { World } from "miniplex"
+
+const world = new World()
+```
