--- a/apps/website/src/routes/manual/installation.mdx
+++ b/apps/website/src/routes/manual/installation.mdx
@@ -2,7 +2,7 @@
 title: Installation
 ---
 
-## Installation
+# Installation
 
 > **Warning** Since this is the documentation for the upcoming 2.0 version of Miniplex, we will be using the `next` tag for installation. If you'd rather use the stable release of the library, [please refer to the 1.0 documentation](https://github.com/hmans/miniplex/tree/miniplex%401.0.0).
 
